fix: wider buttons on mobile and animations cover the whole buttons

--- a/style.css
+++ b/style.css
@@ -144,39 +144,12 @@ button.btnZero:hover {
 
 @media (max-width: 425px) {
 	#buttons {
-		display: grid;
-		grid-template-rows: repeat(3, auto);
-		grid-template-columns: repeat(4, 1fr);
-
+		display: flex;
+		flex-direction: column-reverse;
 		gap: 6px;
 		width: 60%;
 		max-width: 400px;
-		margin-bottom: 30px;
-	}
-
-	.btnInc:nth-child(4) {
-		grid-row: 1;
-		grid-column: 1 / 3;
-	}
-
-	.btnInc:nth-child(5) {
-		grid-row: 1;
-		grid-column: 3 / 5;
-	}
-
-	.btnZero {
-		grid-row: 2;
-		grid-column: 2 / 4;
-	}
-
-	.btnDec:nth-child(2) {
-		grid-row: 3;
-		grid-column: 1 / 3;
-	}
-
-	.btnDec:nth-child(1) {
-		grid-row: 3;
-		grid-column: 3 / 5;
+		margin-bottom: 10px;
 	}
 }
 
